--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use-queue",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A simple task queue implementation for React",
   "main": "index.tsx",
   "scripts": {
@@ -26,8 +26,5 @@
   "bugs": {
     "url": "https://github.com/baughmann/react-use-queue/issues"
   },
-  "homepage": "https://github.com/baughmann/react-use-queue#readme",
-  "peerDependencies": {
-    "react": "16.10.2"
-  }
+  "homepage": "https://github.com/baughmann/react-use-queue#readme"
 }
